--- a/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/index.html
+++ b/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/index.html
@@ -6,13 +6,19 @@
 	
 <div th:replace="navbar :: navbar"></div>
 <div>
-	<h1 class="font-weight-bold text-center pt-4">Welcome to Computer Store Admin Control Panel</h1>
+	<h1 class="font-weight-bold text-center pt-4">WELCOME TO COMPUTER STORE ADMIN CONTROL PANEL</h1>
 </div>
 
-<div class="bg-secondary text-white text-center fixed-bottom">
-	<h3>ComputerStore - Copyright &copy;B1710131</h3>
+<div class="row">
+	<div class="col-2"></div>
+	<div class="col-8 text-center">
+		<hr>
+		<h3 class="pt-5">Emergency Contact:</h3>
+		  <p style="font-size: 1.5em;">0935.214.141 (Mr. Cuong)</p>
+		  <p style="font-size: 1.5em;">0293.213.121 (Mr. Quang)</p>
+	</div>
+	<div class="col-2"></div>
 </div>
-	
 
 </body>
 <script th:src="@{/js/all.js}"></script>
