--- a/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/footer.html
+++ b/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/footer.html
@@ -3,7 +3,7 @@
 <body>
 <div th:fragment = "footer">
 	<div class="mw-100 d-flex flex-fill bg-light">
-		<div class="w-25 pl-4 text-center">
+		<div class="w-25 ml-4 text-center">
 			<p> <b><u>Showroom:</u></b> </p>
 			<p> 170 Tran Quang Dieu Street, An Thoi Ward, Binh Thuy District, Can Tho City</p>
 			<div>
@@ -34,7 +34,7 @@
 			
 		</div>
 		
-		<div class="w-25 pr-4 text-center">
+		<div class="w-25 mr-4 text-center">
 			<p><b><u>Chatbot</u></b></p>
 			<p>Quick and smart. Chat with our visual assistant now!<p>
 			<a href="http://localhost:8000/chatroom.html" target="_blank">Rasa Chatbot</a>
