--- a/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/navbar.html
+++ b/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/navbar.html
@@ -66,6 +66,9 @@
 					<a class="p-2 nav-link" sec:authentication="principal.fullName"></a>
 				</div>
 				<div class="d-inline-block pr-2" style="margin:auto">
+					<a class="btn btn-outline-info" id="order" th:href="@{/cusOrder}"><i class="far fa-list-alt"></i></a>
+				</div>
+				<div class="d-inline-block pr-2" style="margin:auto">
 					<a class="btn btn-outline-info" id="cart" th:href="@{/cart}"><i class="fas fa-shopping-cart"></i></a>
 				</div>
 				<div class="d-inline-block pr-2" style="margin:auto">
