--- a/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/order_info.html
+++ b/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/order_info.html
@@ -15,7 +15,7 @@
 			<div class="border border-secondary rounded p-3">
 			
 				<div class="form-group row">
-					<label class="col-sm-2 col-form-label text-right">Name</label>
+					<label class="col-sm-2 col-form-label text-right">Customer Name</label>
 					<div class="col-sm-10">
 						<input type="text" class="form-control" th:field="*{customerName}" required minlength="2" maxlength="30" readonly/>
 					</div>
@@ -54,7 +54,7 @@
 					<div class="col-sm-10 pt-2">
 						<input type="text" class="form-control" th:field="*{country}" required minlength="2" maxlength="64" readonly/>
 					</div>
-				</div>
+				</div>			
 				
 				<div class="form-group row">
 					<label class="col-sm-2 col-form-label text-right">Order Time</label>
@@ -74,16 +74,6 @@
 					<label class="col-sm-2 col-form-label text-right">Total</label>
 					<div class="col-sm-10">
 						<input type="text" class="form-control" th:field="*{total}" required minlength="2" maxlength="64" readonly/>
-					</div>
-				</div>
-				
-				<div class="form-group row">
-					<label class="col-sm-2 col-form-label text-right">Status</label>
-					<div class="col-sm-10 mt-1">
-						<select th:field="*{status}">
-							<option th:each="os : ${T(com.qcuong.common.entity.OrderStatus).values()}" 
-								th:value="${os}" th:text="${os}" />
-						</select>
 					</div>
 				</div>
 				
@@ -114,35 +104,6 @@
 					<h4>Product Total: <span style="color:blue">[[${order.cartTotal}]]$</span></h4>
 					<h4>Shipping Fee: <span style="color:blue">[[${order.shippingCost}]]$</span></h4>
 					<h4 style="color:blue">Total: [[${order.total}]]$</h4>
-				</div>
-				
-				<hr>
-				
-				<div class="text-center">
-					<h3><u>Order Tracking</u></h3>
-				</div>
-				
-				<div class="row">
-					<div class="col-2"></div>
-					<div class="col-8">
-						<table class="table table-bordered table-border">
-							<thead>
-								<tr class="text-center">
-									<th>Time</th>
-									<th>Status</th>
-									<th>Detail</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr class="text-center" th:each = "track : ${order.orderTracks}">
-									<td>[[${track.updateTime}]]</td>
-									<td>[[${track.status}]]</td>
-									<td>[[${track.notes}]]</td>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-					<div class="col-2"></div>
 				</div>
 				
 				<div class="text-center">
