--- a/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/product_form.html
+++ b/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/product_form.html
@@ -57,39 +57,18 @@
 					<input type="file" id="fileImage" name="fileImage" accept="image/png, image/jpg"/>
 				</div>
 			</div>
-			<!-- 
-			<div class="form-group row">
-				<label class="col-sm-2 col-form-label text-right">Additional Image 1</label>
-				<div class="col-sm-3" style="max-height:250px; max-width:250px; overflow: hidden">
-					<img id="thumbnail" alt="Product Image 1" class="img-fluid" 
-					 th:src="@{${additionalImage1.imagePath}}"/>
-					 
-					 <input class="pt-1" type="file" id="addImg1" accept="image/png, image/jpg" />
-				</div>
-				
-				<div class="col-sm-3" style="max-height:250px; max-width:250px; overflow: hidden">
-					<img id="thumbnail" alt="Product Image 2" class="img-fluid" 
-					 th:src="@{${additionalImage2.imagePath}}"/>
-					 
-					 <input class="pt-1" type="file" accept="image/png, image/jpg" />
-				</div>
-				
-				<div class="col-sm-3" style="max-height:250px; max-width:250px; overflow: hidden">
-					<img id="thumbnail" alt="Product Image 3" class="img-fluid" 
-					 th:src="@{${additionalImage3.imagePath}}" />
-					 
-					 <input class="pt-1" type="file" accept="image/png, image/jpg" />
-				</div>
-					
-			</div>
-			 -->
-			
-			
 			
 			<div class="form-group row">
 				<label class="col-sm-2 col-form-label text-right">In Stock</label>
 				<div class="col-sm-10 pt-2">
 					<input type="checkbox" th:field="*{instock}" />
+				</div>
+			</div>
+			
+			<div class="form-group row">
+				<label class="col-sm-2 col-form-label text-right">Quantity</label>
+				<div class="col-sm-10 pt-2">
+					<input type="number" min="0" step="1" th:field="*{quantity}" />
 				</div>
 			</div>
 			
