--- a/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/reviews.html
+++ b/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/reviews.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-<head th:replace="header :: page_head('Computer Store Admin - Product')"></head>
+<head th:replace="header :: page_head('Computer Store Admin - Review')"></head>
 <body>
 <div th:replace="navbar :: navbar"></div>
 <div class="container-fluid">
 	<div class="d-flex align-items-center justify-content-center mt-2">
-		<h2>Product List</h2>
-	</div>
-	<div class="d-flex align-items-center justify-content-center mb-2" style="width: 150px; margin: 0 auto;">
-		<a class="btn btn-primary" th:href="@{/products/new}">Create Product</a>
+		<h2>Review List</h2>
 	</div>
 	
 	<div th:if="${message != null}" class="alert alert-success text-center">[[${message}]]</div>
@@ -20,53 +17,61 @@
 				<tr>
 					<th scope="col">ID</th>
 					
-					<th scope="col">Product Name</th>
+					<th scope="col">Customer</th>
 					
-					<th scope="col">Image</th>
+					<th scope="col">Time</th>
+															
+					<th scope="col">Product</th>
 					
-					<th scope="col">Category</th>
+					<th scope="col" style="width: 140px">Rating</th>
 					
-					<th scope="col">Brand</th>
+					<th scope="col">Heading</th>
 					
-					<th scope="col">End URL</th>
+					<th scope="col">Content</th>
 					
-					<th scope="col">Purchase</th>
-					
-					<th scope="col">Selling</th>
-					
-					<th scope="col">Discount</th>
-					
-					<th scope="col">In stock</th>
-					
-					<th scope="col">Quantity</th>
-					
-					<th scope="col" style="width: 80px"></th>
+					<th scope="col"></th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="product : ${listproducts}">
-					<td style="vertical-align: middle">[[${product.id}]]</td>
-					<td style="vertical-align: middle; width: 350px">[[${product.name}]]</td>
-					<td style="vertical-align: middle">
-						<img th:src="@{${product.avatarPath}}" style="max-width: 120px; max-height: 120px" class="img-fluid"/>
+				<tr th:each="review : ${listReviews}">
+					<td style="vertical-align: middle">[[${review.id}]]</td>
+					<td style="vertical-align: middle; max-width: 350px">
+						[[${review.customer.firstName}]] [[${review.customer.lastName}]]
 					</td>
-					<td style="vertical-align: middle; width: 100px">[[${product.category.name}]]</td>
-					<td style="vertical-align: middle">[[${product.brand.name}]]</td>
-					<td style="vertical-align: middle">[[${product.endURL}]]</td>
-					<td style="vertical-align: middle">[[${product.purchasePrice}]]</td>
-					<td style="vertical-align: middle">[[${product.sellingPrice}]]</td>
-					<td style="vertical-align: middle">[[${product.discount}]] %</td>
+					<td style="vertical-align: middle">[[${review.reviewTime}]]</td>
+					<td style="vertical-align: middle">[[${review.product.name}]]</td>
 					<td style="vertical-align: middle">
-						<a th:if="${product.instock == true}" class="fas fa-check fa-1x" style="color:blue"></a>
-						<a th:if="${product.instock == false}" class="fas fa-times fa-1x" style="color:red"></a>
+						<th:block th:if="${review.rating} == 1">
+							<i style="color: yellow" class="fas fa-star"></i>
+						</th:block>
+						<th:block th:if="${review.rating} == 2">
+							<i style="color: yellow" class="fas fa-star"></i>
+							<i style="color: yellow" class="fas fa-star"></i>
+						</th:block>
+						<th:block th:if="${review.rating} == 3">
+							<i style="color: yellow" class="fas fa-star"></i>
+							<i style="color: yellow" class="fas fa-star"></i>
+							<i style="color: yellow" class="fas fa-star"></i>
+						</th:block>
+						<th:block th:if="${review.rating} == 4">
+							<i style="color: yellow" class="fas fa-star"></i>
+							<i style="color: yellow" class="fas fa-star"></i>
+							<i style="color: yellow" class="fas fa-star"></i>
+							<i style="color: yellow" class="fas fa-star"></i>
+						</th:block>
+						<th:block th:if="${review.rating} == 5">
+							<i style="color: yellow" class="fas fa-star"></i>
+							<i style="color: yellow" class="fas fa-star"></i>
+							<i style="color: yellow" class="fas fa-star"></i>
+							<i style="color: yellow" class="fas fa-star"></i>
+							<i style="color: yellow" class="fas fa-star"></i>
+						</th:block>
 					</td>
-					<td style="vertical-align: middle">[[${product.quantity}]]</td>
-					<!-- <td><span class="fas fa-product-circle fa-1x"></span></td> -->
+					<td style="vertical-align: middle">[[${review.heading}]]</td>
+					<td style="vertical-align: middle">[[${review.comment}]]</td>
 					<td style="vertical-align: middle">
-						<a class="fas fa-edit fa-1x" th:href="@{'/products/edit/' + ${product.id}}" title="Edit product"></a>
-						&nbsp; 
-						<a class="fas fa-trash-alt fa-1x link-delete" style="color: red" th:productId="${product.id}" 
-							th:href="@{'/products/delete/' + ${product.id}}" title="Delete product"></a>
+						<a class="fas fa-trash-alt fa-1x link-delete" th:href="@{'/reviews/delete/' + ${review.id}}" 
+						style="color: red"	title="Order Delete"></a>
 					</td>
 				</tr>
 			</tbody>
@@ -79,18 +84,18 @@
  				
  					<li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
  						<a class="page-link fas fa-fast-backward fa-lg" 
- 							th:href="@{/products/page/1}"></a>
+ 							th:href="@{/reviews/page/1}"></a>
  					</li>
   					
   					<li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
   						<a class="page-link fas fa-angle-left fa-lg" 
-  							th:href="@{'/products/page/' + ${currentPage - 1}}"></a>
+  							th:href="@{'/reviews/page/' + ${currentPage - 1}}"></a>
   					</li>
 
 				<th:block th:if="${totalPages <= 10}">					
 				<li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" 
 					th:each="i : ${#numbers.sequence(1, totalPage)}">
-					<a class="page-link" style="font-size: 0.8em" th:href="@{'/products/page/' + ${i}}">[[${i}]]</a>
+					<a class="page-link" style="font-size: 0.8em" th:href="@{'/reviews/page/' + ${i}}">[[${i}]]</a>
 				</li>
 				</th:block>
 				
@@ -98,25 +103,25 @@
 					<th:block th:if="${currentPage <= 5 || currentPage > totalPage - 4}">
 						<li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" 
 							th:each="i : ${#numbers.sequence(1, 5)}">
-							<a class="page-link" style="font-size: 0.8em" th:href="@{'/products/page/' + ${i}}">[[${i}]]</a>
+							<a class="page-link" style="font-size: 0.8em" th:href="@{'/reviews/page/' + ${i}}">[[${i}]]</a>
 						</li>
 						
-						<a class="page-link" th:href="@{'/products/page/' + 6 }">...</a>
+						<a class="page-link" th:href="@{'/reviews/page/' + 6 }">...</a>
 						
 						<li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" 
 							th:each="i : ${#numbers.sequence(totalPage - 4, totalPage)}">
-							<a class="page-link" style="font-size: 0.8em" th:href="@{'/products/page/' + ${i}}">[[${i}]]</a>
+							<a class="page-link" style="font-size: 0.8em" th:href="@{'/reviews/page/' + ${i}}">[[${i}]]</a>
 						</li>
 					</th:block>
 				</th:block>
 
    				<li th:class="${currentPage < totalPage ? 'page-item' : 'page-item disabled'}">
-   					<a class="page-link fas fa-angle-right fa-lg" th:href="@{'/products/page/' + ${currentPage + 1} }"></a>
+   					<a class="page-link fas fa-angle-right fa-lg" th:href="@{'/reviews/page/' + ${currentPage + 1} }"></a>
    				</li>
    				
    				
    				<li th:class="${currentPage < totalPage ? 'page-item' : 'page-item disabled'}">
-   					<a class="page-link fas fa-fast-forward fa-lg" th:href="@{'/products/page/' + ${totalPage} }"></a>
+   					<a class="page-link fas fa-fast-forward fa-lg" th:href="@{'/reviews/page/' + ${totalPage} }"></a>
    				</li>
    				
  				</ul>
@@ -148,9 +153,8 @@
 		$(".link-delete").on("click", function(e) {
 			e.preventDefault();
 			link = $(this);
-			productId = link.attr("productId");
 			$("#yesButton").attr("href", link.attr("href"));
-			$("#confirmText").text("Delete this product (ID " + productId + ")?");
+			$("#confirmText").text("Delete this product?");
 			$("#confirmModal").modal();
 		});
 	});
