--- a/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/checkout.html
+++ b/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/checkout.html
@@ -18,7 +18,7 @@
 				<p><b>Phone:</b> [[${phone}]]</p>
 				<p><b>Postal Code:</b> [[${postalCode}]]</p>
 				<p><b>Deliver Days:</b> [[${deliverDays}]]</p>
-				<p><b>Shipping Cost: </b> <span style="color: blue">[[${shippingCost}]]$ </span></p>
+				<p><b>Shipping Cost: </b> <span style="color: blue">$[[${shippingCost}]] </span></p>
 			</div>
 		</div>
 	</div>
@@ -39,13 +39,13 @@
 						<tr>
 							<td class="text-center">[[${item.quantity}]]</td>
 							<td class="pr-2 pl-2">[[${item.product.name}]]</td>
-							<td style="color: blue">[[${item.productTotal}]]$</td>
+							<td style="color: blue">$[[${item.productTotal}]]</td>
 						</tr>
 					</table>
 				</div>
 				
 				<div style="text-align: right">
-					<p class="mt-3"><b >Product Total: <span style="color: blue">[[${productTotal}]]$</span></b></p>
+					<p class="mt-3"><b >Product Total: <span style="color: blue">$[[${productTotal}]]</span></b></p>
 				</div>
 				
 				
@@ -58,9 +58,9 @@
 <div class="row pt-3">
 	<div class="col-3"></div>
 	<div class="col-6 text-center">
-		<h3>Total:  <span style="color: blue">[[${total}]]$</span></h3>
+		<h3>Total:  <span style="color: blue">$[[${total}]]</span></h3>
 		<form th:action="@{/place_order}" method="post">
-		<button class="btn btn-primary"> Place Order (Cash on Delivery only)</button>
+			<button class="btn btn-primary"> Place Order (Cash on Delivery only)</button>
 		</form>
 	</div>
 	<div class="col-3"></div>
