--- a/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/login.html
+++ b/ComputerStoreWebParent/ComputerStoreFrontend/src/main/resources/templates/login.html
@@ -83,7 +83,7 @@
 	</div>
 	
 	<div class="text-center pt-4">
-		<span>New to ComputerStore? <a th:href="@{/customer_register}"> Sign up </a></span>
+		<span>New to ComputerStore? <a th:href="@{/register}"> Sign up </a></span>
 	</div>
 	
 	<div class="p-3"></div>
